Revision history for ExtUtils-Helpers

{{$NEXT}}

0.019     2013-04-24 13:24:50 Europe/Amsterdam
          Fix make_executable for '#!/usr/bin/perl'

0.018     2013-04-16 13:51:42 Europe/Amsterdam
          Don't load Pod::Man

0.017     2013-04-15 14:57:34 Europe/Amsterdam
          Fix man3_pagename to properly split dirs

0.016     2013-04-12 15:39:01 Europe/London
          Add some fixes to batch file generation [Christian Walde]

0.015     2013-04-09 15:01:04 Europe/Amsterdam
          Made man3_pagename more flexible with paths
          Reverted pl2bat to a more original state
          Rewrote fixin code
          Re-added detildefy

0.014     2012-02-22 21:42:35 Europe/Amsterdam
          Remove detildefication, defer to File::HomeDir to do it better

0.013     2012-02-13 00:35:33 Europe/Amsterdam
          Do tilde expansion more sensibly on Windows

0.012     2012-02-07 14:04:33 Europe/Amsterdam
          Added detildefy
          Fix up loading on VMS

0.011     2012-01-09 22:42:01 Europe/Amsterdam
          Move manify to Module::Build::Tiny
          Refactored VMS support
          Make EU::H easier to embed in inc/

0.010     2011-09-21 20:08:58 Europe/Amsterdam
          Fixed make_executable on Windows

0.009     2011-08-24 17:30:00 Europe/Amsterdam
          Fixed failing test on Windows

0.008     2011-08-23 17:09:37 Europe/Amsterdam
          Split out Windows and Unix specific parts
          Use $Config{path_sep} in tests

0.007     2011-05-07 10:59:15 Europe/Amsterdam
          Fixes for make_executable.t and make_executable

0.006     2011-05-05 09:30:59 Europe/Amsterdam
          Made split_like_shell handle newlines and tabs on Windows

0.005     2011-04-20 00:05:13 Europe/Amsterdam
          Fixed definedness issue in manify

0.004     2011-04-19 23:04:53 Europe/Amsterdam
          Added manify

0.003     2011-04-16 15:52:51 Europe/Amsterdam
          Added man1_pagename and man3_pagename

0.002     2011-04-14 14:45:27 Europe/Amsterdam